--- a/client/src/components/pages/Posts/helpers/PostList/PostItem.scss
+++ b/client/src/components/pages/Posts/helpers/PostList/PostItem.scss
@@ -9,7 +9,20 @@ $imageDim: 130px;
     padding: 1.5em;
     display: flex;
     box-shadow: 0 1px 8px 1px rgba($color: #000000, $alpha: 0.1);
-    background-color: white;
+  }
+
+  &__content {
+    flex-grow: 1;
+    width: 40%;
+    padding-left: 2.5em;
+    padding-right: 3em;
+  }
+
+  &__text {
+    margin-bottom: 0.8em;
+    width: 100%;
+    font-size: 1.55rem;
+    overflow-wrap: break-word;
   }
 
   &__user-image {
@@ -17,7 +30,6 @@ $imageDim: 130px;
     width: $imageDim;
     border-radius: 50%;
     object-fit: cover;
-    margin-right: 2.8em;
   }
 
   &__user-name {
@@ -30,11 +42,6 @@ $imageDim: 130px;
     color: rgb(163, 163, 163);
     font-size: 0.85rem;
     margin-bottom: 1.5em;
-  }
-
-  &__text {
-    margin-bottom: 0.8em;
-    font-size: 1.55rem;
   }
 
   &__comment-icon {
